feat(ai): replace Google Gemini with Groq AI; use GROQ_API_KEY and update docs

--- a/CHANGES_2026-01-04.md
+++ b/CHANGES_2026-01-04.md
@@ -7,9 +7,9 @@
 #### 1. ✅ Fixed: "NO GOOGLE API KEY FOUND" Error Message
 **File:** `src/ai/summarizer.py` (Line 26)
 
-**Problem:** The error message incorrectly stated "GOOGLE_API_KEY found" when the key was NOT found.
+**Problem:** The message incorrectly referenced `GOOGLE_API_KEY`; updated to use `GROQ_API_KEY` and clearer messaging.
 
-**Solution:** Changed the message to "ℹ️ GOOGLE_API_KEY not found, using pattern-based analysis"
+**Solution:** Changed the message to "ℹ️ GROQ_API_KEY not found, using pattern-based analysis"
 
 **Impact:** Users now see the correct message indicating that AI enhancement is disabled and pattern-based analysis is being used instead.
 
